changed getFirst to get(0)