@@ -136,7 +136,7 @@ public class PersonaListView extends JPanel implements PropertyChangeListener {
         final Pitch pitch = viewModel.getState().getThisPitch();
 
         final String prompt = "Generate an advertisement for " + pitch.getName() + " targeting "
-                + selectedPersonas.getFirst().getName();
+                + selectedPersonas.get(0).getName();
 
         if (selectedPersonas.size() != 1) {
             JOptionPane.showMessageDialog(
